# WelderEngineRevamp

./: .gitignore  .gitmodules  CMakeLists.txt  index.js
Libraries/: CMakeLists.txt
Libraries/Common/: CommonStandard.hpp  StringRange.hpp
Libraries/Engine/: CopyOnWrite.hpp
Libraries/Gameplay/: PathFinder.hpp
Libraries/Geometry/: GeometryStandard.cpp
Libraries/Meta/: CMakeLists.txt  MetaStandard.hpp  Notification.hpp  Notification.inl
Libraries/Platform/Windows/: DebugClassMap.cpp
Libraries/Serialization/: Precompiled.hpp  SerializationStandard.hpp
Libraries/Support/: BuildVersion.cpp  BuildVersion.hpp
Libraries/Zilch/: Binding.hpp  Binding.inl  CMakeLists.txt  ConstructorBinding.inl  ExecutableState.hpp  Library.cpp  Library.hpp  MethodBinding.inl  Precompiled.hpp  TemplateBinding.hpp  VirtualMethodBinding.inl
Libraries/ZilchShaders/: BaseShaderIRTranslator.hpp  ShaderIRLibraryTranslation.hpp  ShaderImageIntrinsics.cpp  ShaderIntrinsicTypes.cpp  ZilchShadersStandard.hpp
ShaderCompiler/: CMakeLists.txt  main.cpp
ShaderCompiler/Data/Fragments/: AlbedoMap.zilchFrag  AlbedoValue.zilchFrag  AlphaDiscard.zilchFrag  ApiPerspectiveOutput.zilchFrag  Basic.zilchFrag  BasicVertexFrag.zilchFrag  Bloom.zilchFrag  Blur.zilchFrag  BrdfEquations.zilchFrag  ColorMap.zilchFrag  ColorPostProcess.zilchFrag  ColorValue.zilchFrag  DebugPixel.zilchFrag  DirectLighting.zilchfrag  FlipBackfaceNormals.zilchFrag  ForwardPass.zilchfrag  Gamma.zilchFrag  Geometry.zilchFrag  GeometryPass.zilchFrag  HeightMapAlbedoMap.zilchFrag  HeightMapAlbedoValue.zilchfrag  HeightMapTextureWeights.zilchFrag  ImageBasedLighting.zilchFrag  LightFragments.zilchFrag  LightPass.zilchFrag  MeshVertex.zilchFrag  MetallicMap.zilchFrag  MetallicValue.zilchFrag  NormalMap.zilchFrag  Particle.zilchFrag  ParticleCompute.zilchFrag  PointToQuad.zilchFrag  PolyNormals.zilchFrag  PostVertex.zilchFrag  RayTrace.zilchFrag  RayTraceCompute.zilchFrag  RoughnessMap.zilchFrag  RoughnessValue.zilchFrag  ShadowMapping.zilchFrag  SkinnedMeshVertex.zilchFrag  (+9 more)
